--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/link-share
+MONGO_URI=your mongo db url
 JWT_SECRET="AHJSKLAHSOAHSKHAKSHAKLSJALSUJ)AUSUS%^A$S%$A^&SR&AFSVY"
+PORT=12345
